Command side: commands, events and initial version of the aggregate